# taisei

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
include/: main.hpp
include/node/: node.hpp  taisei_node.hpp
include/robot_wrapper/: robot_wrapper.hpp
include/taisei/: taisei.hpp
include/taisei/base_footprint/: base_footprint.hpp
include/taisei/node/: taisei_node.hpp
include/taisei/robot_wrapper/: robot_wrapper.hpp
src/: main.cpp  node.cpp
src/node/: node.cpp
src/robot_wrapper/: robot_wrapper.cpp
src/taisei/base_footprint/: base_footprint.cpp
src/taisei/node/: taisei_node.cpp
src/taisei/robot_wrapper/: frame_names.json  robot_wrapper.cpp
src/wrapper/: robot_wrapper.cpp
